[package]
name = "perf_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
ordered-float = "3.7.0"
rand = "0.8"
serde_json = "1"
structopt = "0.3"

[lib]
name = "perf_experiments"
path = "src/lib.rs"

[[bench]]
name = "heap_bench"
harness = false
